# AndroidDev

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zipper/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zipper/android/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zipper/android/: ExampleUnitTest.kt
core/: build.gradle
core/src/androidTest/java/com/zipper/android/core/: ExampleInstrumentedTest.kt
core/src/main/: AndroidManifest.xml
core/src/main/java/com/zipper/android/core/activitylifecycle/: ActivityLifecycleCallbackDispatcher.kt  ActivityManagerInitializer.kt  ActivityStackImpl.kt  ActivityStackManager.kt  DefaultActivityLifecycleCallbacks.java  IActivityStack.java
core/src/main/java/com/zipper/android/core/cache/disk/lru/: DiskLruCache.java  StrictLineReader.java  Util.java  copyright.kt
core/src/main/java/com/zipper/android/core/util/: Main.java
core/src/main/java/com/zipper/android/core/util/view/: ClickUtil.kt
core/src/test/java/com/zipper/android/core/: ExampleUnitTest.kt
develop/binder-canary/: build.gradle
develop/binder-canary-sample/: build.gradle
develop/binder-canary-sample/src/main/: AndroidManifest.xml
develop/binder-canary-sample/src/main/java/com/example/binder/canary/sample/: MainActivity.java
develop/binder-canary-sample/src/main/res/values/: strings.xml  themes.xml
develop/binder-canary-sample/src/main/res/values-night/: themes.xml
develop/binder-canary/src/androidTest/java/com/zipper/develop/binder/canary/: ExampleInstrumentedTest.java
develop/binder-canary/src/main/cpp/: CMakeLists.txt  binder_canary.cpp  binder_canary.h  binder_hook.cpp  binder_jni.cpp  binder_jni.h  canary.cpp  global.h  jni_helper.h  jni_hook.h  monitor_filter.h
develop/binder-canary/src/main/java/com/zipper/develop/binder/canary/: BinderCanary.java  BinderCanary.kt  MonitorConfig.kt  NativeLib.java
gradle/wrapper/: gradle-wrapper.properties
hidden-api-bypass/dexfile/: README.md  build.gradle
hidden-api-bypass/dexfile/src/androidTest/java/com/zipper/hiddenapibypass/dexfile/: DexFileHiddenApiBypassTest.java
hidden-api-bypass/dexfile/src/main/assets/: boot-reflect.dex
hidden-api-bypass/dexfile/src/main/java/com/zipper/hiddenapibypass/dexfile/: BootstrapClass.java  Reflection.java
hidden-api-bypass/native-stack/: build.gradle
hidden-api-bypass/native-stack/src/androidTest/java/com/zipper/hiddenapibypass/nativestack/: ExampleInstrumentedTest.java
hidden-api-bypass/native-stack/src/main/cpp/: CMakeLists.txt  nativestack.cpp
hidden-api-bypass/native-stack/src/main/java/com/zipper/hiddenapibypass/nativestack/: NativeStackReflection.java
hidden-api-bypass/stub/: build.gradle
hidden-api-bypass/stub/src/main/java/sun/misc/: Unsafe.java
hidden-api-bypass/unsafe/: README.md  build.gradle
hidden-api-bypass/unsafe/src/androidTest/java/com/zipper/hiddenapibypass/unsafe/: ExampleInstrumentedTest.java
hidden-api-bypass/unsafe/src/main/: AndroidManifest.xml
hidden-api-bypass/unsafe/src/main/java/com/zipper/hiddenapibypass/unsafe/: Helper.java  HiddenApiBypass.java
lib-aspectj-ipc/annotation/src/main/java/com/zipper/lib/aspectj/ipc/annotation/: Ipc.java  IpcAnnotation.java  IpcInit.java
lib-aspectj-ipc/sample/: build.gradle
lib-aspectj-ipc/sample/src/androidTest/java/com/zipper/lib/aspectj/ipc/sample/: ExampleInstrumentedTest.kt
lib-aspectj-ipc/sample/src/main/: AndroidManifest.xml
lib-aspectj-ipc/sample/src/main/java/com/zipper/lib/aspectj/ipc/sample/: App.kt  MainActivity.kt  Process2MainActivity.kt  Test.java  TestBeanA.java
lib-aspectj-ipc/sample/src/main/res/layout/: activity_main.xml  activity_process2_main.xml
lib-aspectj-ipc/sample/src/test/java/com/zipper/lib/aspectj/ipc/sample/: ExampleUnitTest.kt
lib-encrypt/src/main/java/com/zipper/lib/encrypt/: HashEncrypt.java  RsaEncrypt.java  StringUtils.java  SymmetricEncrypt.java
nativelibs/bhook/: CMakeLists.txt  build.gradle
nativelibs/bhook/src/main/cpp/: CMakeLists.txt  bh_core.c  bh_dl_monitor.c  bh_hook.h  bh_hook_manager.c  bh_jni.c  bh_recorder.c  bh_task_manager.c  bh_trampo.c
nativelibs/bhook/src/main/java/com/bytedance/android/bytehook/: ByteHook.java  ILibLoader.java
nativelibs/bytehook/: CMakeLists.txt  build.gradle
nativelibs/bytehook/src/main/cpp/: CMakeLists.txt  bh_core.h  bh_dl_monitor.h  bh_elf.h  bh_elf_manager.c  bh_hook_manager.h  bh_task.c  bh_task.h  bytehook.c
nativelibs/common/: CMakeLists.txt  README.md  build.gradle
nativelibs/common/src/main/cpp/: ArtMethodHandle.cpp  CMakeLists.txt  common.cpp
nativelibs/common/src/main/cpp/include/: ArtMethodHandle.h  common_jni_helper.h  logging.h  system_util.h
nativelibs/common/src/main/cpp/include/utils/: bridge_helper.hpp  jni_helper.hpp
nativelibs/common/src/main/java/com/zipper/common/: ArtMethod.java
nativelibs/libs-static/Debug/bhook/armeabi-v7a/: cmake_install.cmake
nativelibs/libs-static/Debug/common/armeabi-v7a/: cmake_install.cmake
nativelibs/libs-static/Debug/xdl/armeabi-v7a/: cmake_install.cmake
nativelibs/xdl/: CMakeLists.txt  build.gradle
nativelibs/xdl/src/main/cpp/: CMakeLists.txt
nativelibs/xhook/: CMakeLists.txt  build.gradle
nativelibs/xhook/src/main/cpp/: CMakeLists.txt  xh_version.c  xh_version.h  xhook.c
nativelibs/xhook/src/main/cpp/include/: xhook.h
